# some_cpp_lib

./: CMakeLists.txt  README.md  boost_serialize_demo.md  main.cpp  string_view.h
RLcoding/: CMakeLists.txt  binaryRL.cpp  binaryRL.h  main.cpp
endRL/: CMakeLists.txt
endRL/include/: DigitalType.h  WaveformOutputterForCompetition.h  readerDemo.h
endRL/script/: CMakeLists.txt  main.cpp  readerDemo.cpp
hisDemo/: CMakeLists.txt
hisDemo/hisFile/: Impro  README.txt  output  partout  tarSym.txt
hisDemo/include/: AllFunction.h  WaveformReaderForCompetition.h
hisDemo/script/: AllFunction.cpp  CMakeLists.txt  ImprovedRead.cpp  PartialDecompress.cpp  ouputDemo.cpp  readerDemo.cpp
signal_coding/: CMakeLists.txt  signal_coding.cpp  signal_coding.h
strXor/: CMakeLists.txt  main.cpp  strXor.cpp  strXor.h
string_view/: string_view1.h
time_coding/: CMakeLists.txt  main.cpp  time_diff_coding.cpp  time_diff_coding.h
